<resources>
    <string name="app_name">MusicSearchApp</string>
    <string name="tv_limit">Limit:</string>
    <string name="bt_search">Search</string>
    <string name="bt_reset">Reset</string>
    <string name="tv_sortby">Sort by:</string>
    <string name="tv_price">Price:</string>
    <string name="tv_date">Date:</string>
    <string name="tv_results">Results</string>
    <string name="ondate">Date</string>
    <string name="offprice">Price</string>
    <string name="hint">Enter a search keyword</string>
    <string name="tv_track">Track:</string>
    <string name="tv_artist">Artist:</string>
    <string name="tv_genre">Genre:</string>
    <string name="tv_album">Album:</string>
    <string name="tv_trackprice">Track Price:</string>
    <string name="tv_albumprice">Album Price:</string>
    <string name="bt_finish">Finish</string>
</resources>
